--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "inquicker-quick",
+  "name": "inquickerquick",
   "version": "0.1.0",
+  "homepage": "/sites/default/files/inquickerer",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -13,9 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
